# eci35_hetprog

./: README.md
lab1/: add_array_serial.cc  add_array_sycl.cc
lab2/: CMakeLists.txt  pi_taylor_serial.cc  pi_taylor_sycl_serial.cc  pi_taylor_sycl_sycl.cc
lab3/: mul_array_sycl.cc  mul_array_sycl.fpga  mul_array_sycl_optimized.cc  mul_array_sycl_optimized.fpga
lab3/mul_array_sycl_optimized.fpga.prj/: compiler_metrics.out  k0_ZTS9optimized_csr.hpp  kernel_report.tcl  kernel_system.qip  kernel_system.v  mul_array_sycl_optimized_859712_91c8af.bc.xml  mul_array_sycl_optimized_859712_91c8af_di.v  mul_array_sycl_optimized_859712_91c8af_di_hw.tcl  mul_array_sycl_optimized_859712_91c8af_di_inst.v  mul_array_sycl_optimized_859712_91c8af_sys.v  mul_array_sycl_optimized_859712_91c8af_sys_hw.tcl  sys_description.hex  sys_description.txt
lab4/: add_array_pipes_sycl.cc  add_array_pipes_sycl.fpga
lab4/add_array_pipes_sycl.fpga.prj/: add_array_pipes_sycl_a3452a_2abdd1.bc.xml  add_array_pipes_sycl_a3452a_2abdd1_di.v  add_array_pipes_sycl_a3452a_2abdd1_di_hw.tcl  add_array_pipes_sycl_a3452a_2abdd1_di_inst.v  add_array_pipes_sycl_a3452a_2abdd1_sys.v  add_array_pipes_sycl_a3452a_2abdd1_sys_hw.tcl  compiler_metrics.out  k0_ZTSZZ4mainENKUlRN2cl4sycl7handlerEE1_clES2_E5Adder_csr.hpp  k1_ZTSZZ4mainENKUlRN2cl4sycl7handlerEE_clES2_E8A_writer_csr.hpp  k2_ZTSZZ4mainENKUlRN2cl4sycl7handlerEE0_clES2_E8B_writer_csr.hpp  k3_ZTSZZ4mainENKUlRN2cl4sycl7handlerEE2_clES2_E8C_reader_csr.hpp  kernel_report.tcl  kernel_system.qip  kernel_system.v  sys_description.hex  sys_description.legend.txt  (+1 more)
(+240 files in other folders)
